--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,3 @@
 # This file lists all individuals having contributed content to the repository.
 
-YATE ASSEKE RONALD <yateronald@gmail.com>
-Leonard Okhurleigbe <Leonard Okhurleigbe>
+Joel Ngunjiri
